--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- <meta name="description" content="">
+ <meta name="description" content="">    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
  <title>Mój pierwszy blog</title>
 
  <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/starter-template/">
