--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -21,24 +21,31 @@
 
 <body>
  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-   <a class="navbar-brand" href="#">Mój blog</a>
+   <a class="navbar-brand" href="/">Mój blog</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
    </button>
 
    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-     <ul class="navbar-nav mr-auto">
-     </ul>
-     <form class="form-inline my-2 my-lg-0">
-       <input class="form-control mr-sm-2" type="text" placeholder="Szukaj" aria-label="Szukaj">
-       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Szukaj</button>
-     </form>
-   </div>
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    {% if session.logged_in %}
+      <form class="form-inline my-2 my-lg-0" action="{{ url_for('logout') }}" method="POST">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Wyloguj</button>
+      </form>
+    {% else %}
+      <a href="{{ url_for('login') }}" class="btn btn-secondary my-2 my-lg-0">Zaloguj</a>
+    {% endif %}
+  </div>
  </nav>
 
  <main role="main" class="container">
-
+  <div class="flash">
+    {% for mesg in get_flashed_messages() %}
+          <h4>{{ mesg }}</h4>
+    {% endfor %}
+  </div>
    {% block content %}
    {% endblock %}
 
