Translate the project to English

--- a/blog/templates/homepage.html
+++ b/blog/templates/homepage.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div>
-    <h4><a href="/posts/"> Dodaj nowy wpis </a></h4>
-    <h4><a href="/drafts/"> Pokaż szkice </a></h4>
+    <h4><a href="/posts/"> Add new post </a></h4>
+    <h4><a href="/drafts/"> Show drafts </a></h4>
 </div>
 {% for post in all_posts %}
 
