--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <meta name="description" content="">    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
- <title>Mój pierwszy blog</title>
+ <title>My first blog</title>
 
  <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/starter-template/">
 
@@ -21,7 +21,7 @@
 
 <body>
  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-   <a class="navbar-brand" href="/">Mój blog</a>
+   <a class="navbar-brand" href="/">My blog</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,10 @@
     </ul>
     {% if session.logged_in %}
       <form class="form-inline my-2 my-lg-0" action="{{ url_for('logout') }}" method="POST">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Wyloguj</button>
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Log out</button>
       </form>
     {% else %}
-      <a href="{{ url_for('login') }}" class="btn btn-secondary my-2 my-lg-0">Zaloguj</a>
+      <a href="{{ url_for('login') }}" class="btn btn-secondary my-2 my-lg-0">Log in</a>
     {% endif %}
   </div>
  </nav>
