--- a/blog/templates/drafts.html
+++ b/blog/templates/drafts.html
@@ -5,9 +5,9 @@
 <table class="table">
    <thead>
      <tr>
-       <th scope="col">Data</th>
-       <th scope="col">Tytuł</th>
-       <th scope="col">Treść</th>
+       <th scope="col">Date</th>
+       <th scope="col">Title</th>
+       <th scope="col">Body</th>
        <th scope="col"></th>
      </tr>
    </thead>
@@ -25,7 +25,7 @@
        <td>{{ post.body|truncate(100, true) }}</td>
        <td>
         <form class="form-inline my-2 my-lg-0" action="{{ url_for('delete_entry',  entry_id=post.id) }}" method="POST">
-            <button class="btn btn-danger" type="submit">Usuń</button>
+            <button class="btn btn-danger" type="submit">Delete</button>
         </form>
         </td>
      </tr>
@@ -33,7 +33,7 @@
    </tbody>
  </table>
  <div class="flash">
-    <h4><a href="/"> Powrót do strony głównej </a></h4>
+    <h4><a href="/"> Back to homepage </a></h4>
 </div>
 
 {% endblock %}
