--- a/blog/templates/entry_form.html
+++ b/blog/templates/entry_form.html
@@ -2,25 +2,25 @@
 
 {% block content %}
 <h3>
-   Dodaj nowy wpis
+   Add new post
 </h3>
 <form action="" method="POST">
   {{form.hidden_tag()}}
    <div class="form-group">
-       <label for="title">Tytuł wpisu</label>
+       <label for="title">Title</label>
        {{ form.title(class_="form-control") }}
    </div>
    <div class="form-group">
-       <label for="body">Treść</label>
+       <label for="body">Body</label>
        {{ form.body(class_="form-control", cols="100", rows="20") }}
    </div>
    <div class="form-check">
        {{ form.is_published(class_="form-check-input") }}
-       <label class="form-check-label" for="is_published">Wpis dodany</label>
+       <label class="form-check-label" for="is_published">Post added</label>
    </div>
-   <button type="submit" class="btn btn-primary mt-5">Zapisz</button>
+   <button type="submit" class="btn btn-primary mt-5">Save</button>
 </form>
 <div class="flash">
-    <h4><a href="/"> Powrót do strony głównej </a></h4>
+    <h4><a href="/"> Back to homepage </a></h4>
 </div>
 {% endblock %}
